--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -18,4 +18,4 @@ jobs:
       - uses: actions/checkout@v3.2.0
       - uses: actions/setup-node@v3
       - run: npx --package renovate -c 'renovate-config-validator'
-      - run: npx --package renovate -c 'renovate-config-validator --config default.json'
+      - run: npx --package renovate -c 'renovate-config-validator default.json'
